Fixes to database